source/FortuneCookie/style.css
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.background {
  position: fixed;
  top: -10px;
  left: -10px;
  right: -10px;
  bottom: -10px;
  z-index: -1;
  background-image: url("Images/Background.png");
  background-size: cover;
  background-position: center;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Navigation bar settings */
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #1e1f2e;
}

/* Navigation bar settings */
li {
  float: left;
}

/* Navigation bar settings */
li a,
.dropbtn {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 16px 16px;
  text-decoration: none;
}

li a:hover,
.audio-dropdown:hover .dropbtn {
  /* background-color: #3d3c59; */
  background-color: #1e1f2e;
  color: #5d59d1;
}

li.audio-dropdown {
  display: inline-block;
}

.audio-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.audio-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

.audio-content a:hover {
  background-color: #1e1f2e;
  color: #5d59d1;
}

.audio-dropdown:hover .audio-content {
  display: block;
  background-color: #3d3c59;
}

.fortune-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
}

.fortune-cookie {
  width: 300px;
  height: 300px;
}
.left-side {
  position: absolute;
  top: 0;
  left: 0;
  transform-origin: center;
  pointer-events: none;
  display: none;
}
.right-side,
.cracked .full {
  display: none;
}
.cracked .left-side,
.cracked .right-side,
.cracked .fortune-paper {
  display: block;
}
.fortune-button {
  position: relative;
}
.cracked .fortune-button:focus {
  outline: none;
}

.button {
  position: absolute;
  top: 100%;
  margin-top: 20px;
  transition: opacity 0.5s;
}
.button:disabled {
  opacity: 0;
  pointer-events: none;
}

.fortune-paper {
  display: none;
  position: absolute;
  padding: 20px;
  background-color: black;
  border: 3px solid #f1c86c;
  color: black;
  max-width: 500px;
  border-radius: 10px;
  font-size: 24px;
  font-weight: bold;
  text-align: center;
  z-index: -1;
  width: calc(100vw - 40px);
  color: transparent;
  transform: perspective(1000px) scale(0.5) rotateY(-196deg) rotateX(20deg)
    translateZ(900px) rotateZ(135deg);
}
#fortune-text {
  margin: 0;
}
.pull-out {
  animation: pull-out-paper 3s forwards;
}
@keyframes pull-out-paper {
  0% {
    transform: perspective(1000px) scale(0.5) rotateY(-196deg) rotateX(20deg)
      translateZ(900px) rotateZ(135deg);
    z-index: -1;
  }
  33% {
    transform: perspective(1000px) scale(0.5) rotateY(-155deg) rotateX(43deg)
      translateZ(900px) rotateZ(168deg);
    z-index: -1;
  }
  100% {
    transform: perspective(1000px) scale(0.5) rotateY(0deg) rotateX(0)
      translateZ(350px) rotateZ(360deg);
    z-index: 5;
  }
}

.reveal {
  transform: perspective(1000px) scale(0.5) rotateY(0deg) rotateX(0)
    translateZ(350px) rotateZ(360deg);
  z-index: 5;
  display: block;
}
.reveal p {
  background-image: linear-gradient(
    90deg,
    transparent,
    transparent,
    rgb(255, 0, 221),
    #f1c86c,
    #f1c86c
  );
  background-size: 2000px;
  -webkit-background-clip: text;
  background-clip: text;
  animation: reveal-text 1s forwards;
}

@keyframes reveal-text {
  from {
    background-position: left;
  }
  to {
    background-position: right;
  }
}

.nav-list a:hover {
  color: #5d59d1;
}

.title {
  display: flex;
  justify-content: center;
}

.page-subtitle {
  display: flex;
  justify-content: center;
  color: #ffffff;
}

.nav-list a {
  text-decoration: none;
  color: #ffffff;
}

.menu-bar {
  display: flex;
  justify-content: center;
}

.nav-items-list {
  display: flex;
  justify-content: center;
  list-style: none;
  padding: 0;
}

.nav-list {
  margin: 0 10px;
}

.dramatic-bar {
  position: fixed;
  background-color: black;
  left: 0;
  right: 0;
  height: 0;
  transition: height 1s;
  z-index: 5;
}
.dramatic-mode .dramatic-bar {
  height: 15vh;
}
.top {
  top: 0;
}
.bottom {
  bottom: 0;
}
nav,
h1,
aside {
  transition: opacity 0.5s 0.5s;
}
.dramatic-mode nav,
.dramatic-mode h1,
.dramatic-mode aside {
  opacity: 0;
  transition: opacity 0.5s;
}

